--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "A lightweight library to parse .docx files in Cloudflare Workers",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "files": ["dist"],
   "scripts": {
-    "build": "esbuild src/index.ts --bundle --minify --platform=browser --format=esm --outfile=dist/index.js",
+    "build": "tsc && esbuild src/index.ts --bundle --minify --platform=browser --format=esm --outfile=dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
